# ant_desktop

./: CMakeLists.txt  Readme.md  ant_receive_ch.cpp  ant_receive_ch.h  ant_receive_defines.h  main.cpp  plots.kst  ue5_lib.cpp
ANT-SDK_PC.3.5/: ANT_Libraries.sln  CMakeLists.txt  readme.txt
ANT-SDK_PC.3.5/ANT_DLL/: ANT_DLL.vcxproj  ANT_DLL.vcxproj.filters  ant.cpp  ant.h  build_version.h  resource.h
ANT-SDK_PC.3.5/ANT_LIB/: CMakeLists.txt
ANT-SDK_PC.3.5/ANT_Managed_Library/: ANT_Channel.cs  ANT_ChannelID.cs  ANT_ChannelStatus.cs  ANT_Common.cs  ANT_Device.cs  ANT_DeviceCapabilities.cs  ANT_DeviceInfo.cs  ANT_Exception.cs  ANT_Managed_Library.csproj  ANT_Managed_Library.sln  ANT_ReferenceLibrary.cs  ANT_Response.cs  ANT_VersionInfo.cs  IANT_Channel.cs
ANT-SDK_PC.3.5/ANT_Managed_Library/ANTFS/: ANTFS_ClientChannel.cs  ANTFS_ClientParameters.cs  ANTFS_Common.cs  ANTFS_ConfigParameters.cs  ANTFS_DeviceParameters.cs  ANTFS_Directory.cs  ANTFS_Exception.cs  ANTFS_HostChannel.cs  ANTFS_ReferenceLibrary.cs  ANTFS_RequestParameters.cs  ANTFS_ResponseParameters.cs  ANTFS_TransferStatus.cs  ANT_IntegratedANTFSClient.cs
ANT-SDK_PC.3.5/ANT_Managed_Library/Properties/: AssemblyInfo.cs
ANT-SDK_PC.3.5/ANT_NetDll_Demo/: ANT_NetDll_Demo.csproj  App.xaml  App.xaml.cs  DemoWindow.xaml  DemoWindow.xaml.cs
ANT-SDK_PC.3.5/ANT_NetDll_Demo/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
ANT-SDK_PC.3.5/ANT_Unmanaged_Wrapper/: ANT_Unmanaged_Wrapper.rc  ANT_Unmanaged_Wrapper.vcxproj  DLL_exports.cpp  build_version.h  resource.h  version.h
ANT-SDK_PC.3.5/DEMO_ANTFS/: DEMO_ANTFS.csproj  demo_antfs.cs  demo_client.cs  demo_host.cs
ANT-SDK_PC.3.5/DEMO_ANTFS/Properties/: AssemblyInfo.cs
ANT-SDK_PC.3.5/DEMO_DLL/: DEMO_DLL.vcxproj  DEMO_DLL.vcxproj.filters  ant_dll.cpp  ant_dll.h  ant_dll_demo_version.h  build_version.h  demo.cpp  demo.h  libant.cpp  libant.h  resource.h
ANT-SDK_PC.3.5/DEMO_HR_RECEIVER/: DEMO_HR_RECEIVER.vcxproj  DEMO_HR_RECEIVER.vcxproj.filters  build_version.h  demo_hr_receiver.cpp  demo_hr_receiver.h  resource.h
ANT-SDK_PC.3.5/DEMO_HR_TRANSMITTER/: DEMO_HR_TRANSMITTER.vcxproj  DEMO_HR_TRANSMITTER.vcxproj.filters  build_version.h  demo_hr_transmitter.cpp  demo_hr_transmitter.h  demo_hr_transmitter_version.h  resource.h
ANT-SDK_PC.3.5/DEMO_LIB/: DEMO_LIB.vcxproj  DEMO_LIB.vcxproj.filters  ant_demo_lib_version.h  build_version.h  demo.cpp  demo.h  resource.h
ANT-SDK_PC.3.5/DEMO_NET/: DEMO_NET.csproj  demo.cs
ANT-SDK_PC.3.5/DEMO_NET/Properties/: AssemblyInfo.cs
AntPlusPlugin/: AntPlusPlugin.uplugin
AntPlusPlugin/Source/AntPlusPlugin/: AntPlusPlugin.Build.cs
AntPlusPlugin/Source/AntPlusPlugin/Private/: AntPlusPlugin.cpp  AntPlusPluginBPLibrary.cpp
AntPlusPlugin/Source/AntPlusPlugin/Public/: AntPlusPlugin.h  AntPlusPluginBPLibrary.h
Test/: CMakeLists.txt  main.cpp
